# MemoryTrafficProfiler

./: .bazelrc  .clangd  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  CMakeLists.txt  MODULE.bazel  README.md  ass  ass_function.sh  build-pixel8pro.sh  build-s25.sh  build_all.sh  pyproject.toml  setup.py
bazel/: BUILD.bazel  libgpu_counters.bzl  qprof.bzl
cmake/: FindQProf.cmake
examples/: BUILD.bazel  CMakeLists.txt  cpu_memstress.cpp  example.cpp  test_cpu_backend.sh
include/: GPUBandwidthProfiler.h  MemoryFootprintProfiler.h  MemoryTrafficProfiler.h
include/backends/: adreno.h  backend.h  constants.h  cpu.h  mali.h  npu.h  qprof_session.h
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/gpu_bandwidth_profiler/: __init__.py
python/gpu_bandwidth_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/memory_traffic_profiler/: __init__.py
src/: GPUBandwidthProfiler.cpp  MemoryFootprintProfiler.cpp  MemoryTrafficProfiler.cpp
src/backends/: adreno.cpp  adreno.h  cpu.cpp  mali.cpp  mali.h  npu.cpp  qprof_session.cpp
