load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Config settings for backend selection
config_setting(
    name = "build_mali_backend",
    define_values = {"build_mali_backend": "1"},
)

config_setting(
    name = "build_adreno_backend",
    define_values = {"build_adreno_backend": "1"},
)

config_setting(
    name = "build_cpu_backend",
    define_values = {"build_cpu_backend": "1"},
)

config_setting(
    name = "build_npu_backend",
    define_values = {"build_npu_backend": "1"},
)

platform(
    name = "android_arm64_platform",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:arm64",
    ],
)

# Common backend interface
cc_library(
    name = "backend_interface",
    hdrs = [
        "include/backends/backend.h",
        "include/backends/constants.h",
    ],
    includes = ["include"],
)

# Mali backend
cc_library(
    name = "mali_backend",
    srcs = ["src/backends/mali.cpp"],
    hdrs = ["include/backends/mali.h"],
    deps = [
        ":backend_interface",
            "@libgpu_counters_build//hwcpipe:hwcpipe",
    ],
    defines = ["BUILD_MALI_BACKEND"],
    includes = ["include"],
    copts = ["-std=c++14"],
)

# Adreno backend
cc_library(
    name = "adreno_backend",
    srcs = ["src/backends/adreno.cpp"],
    hdrs = ["include/backends/adreno.h"],
    deps = [
        ":backend_interface",
        "@qprof//:qprof",
    ],
    defines = ["BUILD_ADRENO_BACKEND"],
    includes = ["include"],
    copts = ["-std=c++14"],
)

# CPU backend
cc_library(
    name = "cpu_backend",
    srcs = ["src/backends/cpu.cpp"],
    hdrs = ["include/backends/cpu.h"],
    deps = [
        ":backend_interface",
    ],
    defines = ["BUILD_CPU_BACKEND"],
    includes = ["include"],
    copts = ["-std=c++14"],
)

# NPU backend
cc_library(
    name = "npu_backend",
    srcs = ["src/backends/npu.cpp"],
    hdrs = ["include/backends/npu.h"],
    deps = [
        ":backend_interface",
        "@qprof//:qprof",
    ],
    defines = ["BUILD_NPU_BACKEND"],
    includes = ["include"],
    copts = ["-std=c++14"],
)

# Main MemoryTrafficProfiler library
cc_library(
    name = "memory_traffic_profiler",
    srcs = ["src/MemoryFootprintProfiler.cpp"],
    hdrs = ["include/MemoryFootprintProfiler.h"],
    deps = [
        ":backend_interface",
    ] + select({
        ":build_mali_backend": [":mali_backend"],
        "//conditions:default": [],
    }) + select({
        ":build_adreno_backend": [":adreno_backend"],
        "//conditions:default": [],
    }) + select({
        ":build_cpu_backend": [":cpu_backend"],
        "//conditions:default": [],
    }) + select({
        ":build_npu_backend": [":npu_backend"],
        "//conditions:default": [],
    }),
    defines = select({
        ":build_mali_backend": ["BUILD_MALI_BACKEND"],
        "//conditions:default": [],
    }) + select({
        ":build_adreno_backend": ["BUILD_ADRENO_BACKEND"],
        "//conditions:default": [],
    }) + select({
        ":build_cpu_backend": ["BUILD_CPU_BACKEND"],
        "//conditions:default": [],
    }) + select({
        ":build_npu_backend": ["BUILD_NPU_BACKEND"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    linkopts = ["-pthread"],
    copts = ["-std=c++14"],
)

# Backward compatibility alias
alias(
    name = "gpu_memory_footprint_profiler",
    actual = ":memory_traffic_profiler",
)
